--- a/index.html
+++ b/index.html
@@ -1,19 +1,126 @@
-><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <title>Proyecto JS</title>
 </head>
+
 <body>
+    <header>
+        <picture>
+            <img class="logo" src="./assets/images/bmw-logo-cool.jpg" alt="Logo">
+        </picture>
+        <nav class="navbar justify-content-xxl-center">
+            <div class="buscador">
+                <label for="buscar"><i class="fa-solid fa-magnifying-glass"></i></label>
+                <input class="input-buscador" type="text" id="inputTexto" placeholder="Buscar...">
+            </div>
+            <div id="register"></div>
+            <button id="button-register" class="button-index">
+                <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 0h24v24H0z" fill="none"></path>
+                    <path
+                        d="M5 13c0-5.088 2.903-9.436 7-11.182C16.097 3.564 19 7.912 19 13c0 .823-.076 1.626-.22 2.403l1.94 1.832a.5.5 0 0 1 .095.603l-2.495 4.575a.5.5 0 0 1-.793.114l-2.234-2.234a1 1 0 0 0-.707-.293H9.414a1 1 0 0 0-.707.293l-2.234 2.234a.5.5 0 0 1-.793-.114l-2.495-4.575a.5.5 0 0 1 .095-.603l1.94-1.832C5.077 14.626 5 13.823 5 13zm1.476 6.696l.817-.817A3 3 0 0 1 9.414 18h5.172a3 3 0 0 1 2.121.879l.817.817.982-1.8-1.1-1.04a2 2 0 0 1-.593-1.82c.124-.664.187-1.345.187-2.036 0-3.87-1.995-7.3-5-8.96C8.995 5.7 7 9.13 7 13c0 .691.063 1.372.187 2.037a2 2 0 0 1-.593 1.82l-1.1 1.039.982 1.8zM12 13a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
+                        fill="currentColor"></path>
+                </svg>
+                <span>Regístrate</span>
+            </button>
+            <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+            aria-controls="offcanvasExample"><i class="fa-solid fa-cart-shopping fa-xl boton-carrito"></i></a>
+        </nav>
+    </header>
+    <main>
+        <div id="modal_container" class="modal-container text-black bg-light bg-opacity-75">
+            <div class="formulario">
+                <div class="register-box">
+                    <h1>Bienvenido a Mundo Bmw, registrate para iniciar sesion</h1>
+                    <form id="idForm" class="register-form">
+                        <label for="username">Usuario</label>
+                        <input type="text" id="user" placeholder="Usuario">
+                        <label for="password">Contraseña</label>
+                        <input type="password" id="password" placeholder="Contraseña">
+                        <label for="email">E-mail</label>
+                        <input type="text" id="email" placeholder="E-mail">
+                        <hr>
+                        <button type="submit" class="button-register">Registrarme</button>
+                    </form>
+                    <button id="close" class="button-register">Avanzar</button>
+                </div>
+            </div>
+        </div>
+        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+            aria-labelledby="offcanvasExampleLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title " id="offcanvasExampleLabel">Mi Carrito</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                    aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body" id="carrito"></div>
+            <div id="total-carrito"></div>
+            <button id="vaciar-carrito">Vaciar Carrito</button>
+            <button id="confirmar-compra">Confirmar Compra</button>
+        </div>
+        <div id="carouselExampleDark" class="carousel carousel-light slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img class="img-motor" src="./assets/images/motor-s85-bmw-v10jpg.jpg" class="d-block w-100" alt="motor-bmw">
+                    <div class="carousel-caption d-none d-md-block text-black bg-light bg-opacity-50">
+                        <h5>Motor S85 Bmw E60 V10 507 CV</h5>
+                        <p>Totalmente inspirado en la Formula 1</p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img class="img-transmision" src="./assets/images/Transmision-bmw.jpg" class="d-block w-100"
+                        alt="transmision-bmw">
+                    <div class="carousel-caption d-none d-md-block text-black bg-light bg-opacity-50">
+                        <h5>Transmision manual de 6 velocidades</h5>
+                        <p>Consulte por disponibilidad</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="img-turbo" src="./assets/images/turbo-bmw-b58.jpg" class="d-block w-100" alt="bmw-turbo">
+                    <div class="carousel-caption d-none d-md-block text-black bg-light bg-opacity-50">
+                        <h5>Turbo B58</h5>
+                        <p>Aplica para los Bmw serie 2 fabricados del 2015 hasta la actual fecha</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <div id="divBmw" class="row"></div>
+    </main>
 
-    <div>
-        <h1>Bienvenido a Talys Celucorp</h1>
-        <h2>Elije una opcion para continuar</h2>
-    </div>
-
-    <script src="js/main.js"></script>
+    <script src="https://kit.fontawesome.com/6405feee34.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
+    <script src="./js/script.js"></script>
 </body>
+
 </html>
