--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <title>Proyecto JS</title>
 </head>
 
@@ -19,7 +20,7 @@
         <nav class="navbar justify-content-xxl-center">
             <div class="buscador">
                 <label for="buscar"><i class="fa-solid fa-magnifying-glass"></i></label>
-                <input class="input-buscador" type="text" id="inputTexto" placeholder="Buscar...">
+                <input class="input-buscador opacity-75" type="text" id="inputTexto" placeholder="Buscar...">
             </div>
             <div id="register"></div>
             <button id="button-register" class="button-index">
@@ -29,7 +30,7 @@
                         d="M5 13c0-5.088 2.903-9.436 7-11.182C16.097 3.564 19 7.912 19 13c0 .823-.076 1.626-.22 2.403l1.94 1.832a.5.5 0 0 1 .095.603l-2.495 4.575a.5.5 0 0 1-.793.114l-2.234-2.234a1 1 0 0 0-.707-.293H9.414a1 1 0 0 0-.707.293l-2.234 2.234a.5.5 0 0 1-.793-.114l-2.495-4.575a.5.5 0 0 1 .095-.603l1.94-1.832C5.077 14.626 5 13.823 5 13zm1.476 6.696l.817-.817A3 3 0 0 1 9.414 18h5.172a3 3 0 0 1 2.121.879l.817.817.982-1.8-1.1-1.04a2 2 0 0 1-.593-1.82c.124-.664.187-1.345.187-2.036 0-3.87-1.995-7.3-5-8.96C8.995 5.7 7 9.13 7 13c0 .691.063 1.372.187 2.037a2 2 0 0 1-.593 1.82l-1.1 1.039.982 1.8zM12 13a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
                         fill="currentColor"></path>
                 </svg>
-                <span>Regístrate</span>
+                <span class="btn btn-secondary opacity-50">Regístrate</span>
             </button>
             <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
             aria-controls="offcanvasExample"><i class="fa-solid fa-cart-shopping fa-xl boton-carrito"></i></a>
@@ -40,7 +41,7 @@
             <div class="formulario">
                 <div class="register-box">
                     <h1>Bienvenido a Mundo Bmw, registrate para iniciar sesion</h1>
-                    <form id="idForm" class="register-form">
+                    <form id="idForm" class="register-form opacity-75">
                         <label for="username">Usuario</label>
                         <input type="text" id="user" placeholder="Usuario">
                         <label for="password">Contraseña</label>
@@ -48,20 +49,20 @@
                         <label for="email">E-mail</label>
                         <input type="text" id="email" placeholder="E-mail">
                         <hr>
-                        <button type="submit" class="button-register">Registrarme</button>
+                        <button type="submit" class="btn btn-secondary">Registrarme</button>
                     </form>
-                    <button id="close" class="button-register">Avanzar</button>
+                    <button id="close" class="btn btn-secondary">Avanzar</button>
                 </div>
             </div>
         </div>
-        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+        <div class="offcanvas offcanvas-start bg-black" tabindex="-1" id="offcanvasExample"
             aria-labelledby="offcanvasExampleLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title " id="offcanvasExampleLabel">Mi Carrito</h5>
+                <h2 class="offcanvas-title " id="offcanvasExampleLabel">Mi Carrito</h2>
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                     aria-label="Close"></button>
             </div>
-            <div class="offcanvas-body" id="carrito"></div>
+            <div class="offcanvas-body bg-gradient" id="carrito"></div>
             <div id="total-carrito"></div>
             <button id="vaciar-carrito">Vaciar Carrito</button>
             <button id="confirmar-compra">Confirmar Compra</button>
@@ -77,25 +78,25 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                    <img class="img-motor" src="./assets/images/motor-s85-bmw-v10jpg.jpg" class="d-block w-100" alt="motor-bmw">
-                    <div class="carousel-caption d-none d-md-block text-black bg-light bg-opacity-50">
-                        <h5>Motor S85 Bmw E60 V10 507 CV</h5>
-                        <p>Totalmente inspirado en la Formula 1</p>
+                    <img class="img-" src="./assets/images/motor-s85-bmw-v10jpg.jpg" class="d-block w-100" alt="-bmw">
+                    <div class="carousel-caption d-none d-md-block text-black bg-light bg-opacity-50 ">
+                        <h2> S85 Bmw E60 V10 507 CV</h2>
+                        <h3>Totalmente inspirado en la Formula 1</h3>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img class="img-transmision" src="./assets/images/Transmision-bmw.jpg" class="d-block w-100"
+                    <img class="img-transmision" src="./assets/images/Transmision-46k.jpg" class="d-block w-100"
                         alt="transmision-bmw">
                     <div class="carousel-caption d-none d-md-block text-black bg-light bg-opacity-50">
-                        <h5>Transmision manual de 6 velocidades</h5>
-                        <p>Consulte por disponibilidad</p>
+                        <h2>Transmision manual de 6 velocidades</h2>
+                        <h3>Consulte por disponibilidad</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="img-turbo" src="./assets/images/turbo-bmw-b58.jpg" class="d-block w-100" alt="bmw-turbo">
                     <div class="carousel-caption d-none d-md-block text-black bg-light bg-opacity-50">
-                        <h5>Turbo B58</h5>
-                        <p>Aplica para los Bmw serie 2 fabricados del 2015 hasta la actual fecha</p>
+                        <h3>Turbo B58</h3>
+                        <h3>Aplica para los Bmw serie 2 fabricados del 2015 hasta la actual fecha</h6>
                     </div>
                 </div>
             </div>
@@ -120,6 +121,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/script.js"></script>
 </body>
 
