se agrega fetch al proyecto

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             </button>
         </div>
         <div id="divBmw" class="row"></div>
+        <div id="caja" class="row"></div>
     </main>
 
     <script src="https://kit.fontawesome.com/6405feee34.js" crossorigin="anonymous"></script>
